--- a/B42_Rotations.ipynb
+++ b/B42_Rotations.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "Text(0.21, 0.09, 'π/4')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -529,25 +529,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "QiskitError",
-     "evalue": "'Data for experiment \"circuit359\" could not be found.'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\qiskit\\result\\result.py\u001b[0m in \u001b[0;36m_get_experiment\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    264\u001b[0m                 \u001b[1;31m# Look into `result[x].header.name` for the names.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 265\u001b[1;33m                 exp = next(result for result in self.results\n\u001b[0m\u001b[0;32m    266\u001b[0m                            if getattr(getattr(result, 'header', None),\n",
-      "\u001b[1;31mStopIteration\u001b[0m: ",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mQiskitError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-52-388fd30c6486>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mjob1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqc1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mAer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_backend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'statevector_simulator'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moptimization_level\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m \u001b[0mcurrent_state1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_statevector\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mqc1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[0mx1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcurrent_state1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[0my1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcurrent_state1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\qiskit\\result\\result.py\u001b[0m in \u001b[0;36mget_statevector\u001b[1;34m(self, experiment, decimals)\u001b[0m\n\u001b[0;32m    205\u001b[0m         \"\"\"\n\u001b[0;32m    206\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 207\u001b[1;33m             return postprocess.format_statevector(self.data(experiment)['statevector'],\n\u001b[0m\u001b[0;32m    208\u001b[0m                                                   decimals=decimals)\n\u001b[0;32m    209\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\qiskit\\result\\result.py\u001b[0m in \u001b[0;36mdata\u001b[1;34m(self, experiment)\u001b[0m\n\u001b[0;32m    104\u001b[0m         \"\"\"\n\u001b[0;32m    105\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 106\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_experiment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexperiment\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    107\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mKeyError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    108\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mQiskitError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'No data for experiment \"{0}\"'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexperiment\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\qiskit\\result\\result.py\u001b[0m in \u001b[0;36m_get_experiment\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    268\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    269\u001b[0m                 raise QiskitError('Data for experiment \"%s\" could not be found.' %\n\u001b[1;32m--> 270\u001b[1;33m                                   key)\n\u001b[0m\u001b[0;32m    271\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    272\u001b[0m         \u001b[1;31m# Check that the retrieved experiment was successful\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mQiskitError\u001b[0m: 'Data for experiment \"circuit359\" could not be found.'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.87461689 -0.4848147 ]\n",
+      "[ 0.4848147  -0.87461689]\n",
+      "1.1102230246251565e-16\n",
+      "Dot product is 0(or very close to zero for all values of theta).\n"
      ]
     }
    ],
@@ -568,24 +560,26 @@
     "c1 = ClassicalRegister(1)\n",
     "qc1 = QuantumCircuit(q1,c1)\n",
     "\n",
-    "qc1.ry(2*angle,q1[0])\n",
+    "qc1.ry(2*angle1,q1[0])\n",
     "\n",
-    "job1 = execute(qc1,Aer.get_backend('statevector_simulator'),optimization_level=0)\n",
-    "current_state1 = job.result().get_statevector(qc1)\n",
-    "x1 = current_state1[0].real\n",
-    "y1 = current_state1[1].real\n",
+    "job = execute(qc1,Aer.get_backend('statevector_simulator'),optimization_level=0)\n",
+    "current_state = job.result().get_statevector(qc1)\n",
+    "state1 = current_state.real\n",
     "\n",
     "q2 =  QuantumRegister(1)    \n",
     "c2 = ClassicalRegister(1)\n",
     "qc2 = QuantumCircuit(q2,c2)\n",
     "\n",
-    "qc2.ry(2*angle,q2[0])\n",
+    "qc2.ry(2*(angle1+pi/2),q2[0])\n",
     "\n",
-    "job2 = execute(qc1,Aer.get_backend('statevector_simulator'),optimization_level=0)\n",
-    "current_state2 = job.result().get_statevector(qc2)\n",
+    "job = execute(qc2,Aer.get_backend('statevector_simulator'),optimization_level=0)\n",
+    "current_state = job.result().get_statevector(qc2)\n",
     "\n",
-    "x2, y2 = current_state1[0].real, current_state1[1].real\n",
-    "print(x2, y2)\n"
+    "state2 = current_state.real\n",
+    "print(state1)\n",
+    "print(state2)\n",
+    "print(state1[0]*state2[0] + state1[1]*state2[1])\n",
+    "print(\"Dot product is 0(or very close to zero for all values of theta).\")"
    ]
   },
   {
@@ -616,12 +610,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1': 1000}\n",
+      "your guess is theta2\n",
+      "picked_angle is theta2\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
-    "from math import pi\n",
+    "from math import pi, cos\n",
     "from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit, execute, Aer\n",
     "\n",
     "random_angle = randrange(3600)/10\n",
@@ -643,9 +647,17 @@
     "#\n",
     "# your code is here\n",
     "#\n",
-    "your_guess = \"\"\n",
+    "qc.ry(2*(-rotation_angle1), q[0])\n",
+    "qc.measure(q,c)\n",
     "\n",
+    "job = execute(qc,Aer.get_backend('qasm_simulator'),shots=1000)\n",
     "\n",
+    "counts = job.result().get_counts(qc)\n",
+    "print(counts)\n",
+    "if '0' in counts:\n",
+    "    your_guess = \"theta1\"\n",
+    "else:\n",
+    "    your_guess = \"theta2\"\n",
     "\n",
     "\n",
     "######################\n",
@@ -659,6 +671,27 @@
    "source": [
     "<a href=\"B42_Rotations_Solutions.ipynb#task7\">click for our solution</a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
