--- a/B42_Rotations_Solutions.ipynb
+++ b/B42_Rotations_Solutions.ipynb
@@ -496,9 +496,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 - the result of dot product is  0.0\n",
+      "random angle is 332.4\n",
+      "x1 , y1 = 0.8862 -0.4633\n",
+      "x2 , y2 = 0.4633 0.8862\n",
+      "\n",
+      "1 - the result of dot product is  0.0\n",
+      "random angle is 33.8\n",
+      "x1 , y1 = 0.83098 0.5563\n",
+      "x2 , y2 = -0.5563 0.83098\n",
+      "\n",
+      "2 - the result of dot product is  0.0\n",
+      "random angle is 209.3\n",
+      "x1 , y1 = -0.87207 -0.48938\n",
+      "x2 , y2 = 0.48938 -0.87207\n",
+      "\n",
+      "3 - the result of dot product is  -0.0\n",
+      "random angle is 204.1\n",
+      "x1 , y1 = -0.91283 -0.40833\n",
+      "x2 , y2 = 0.40833 -0.91283\n",
+      "\n",
+      "4 - the result of dot product is  0.0\n",
+      "random angle is 65.1\n",
+      "x1 , y1 = 0.42104 0.90704\n",
+      "x2 , y2 = -0.90704 0.42104\n",
+      "\n",
+      "5 - the result of dot product is  0.0\n",
+      "random angle is 248.1\n",
+      "x1 , y1 = -0.37299 -0.92784\n",
+      "x2 , y2 = 0.92784 -0.37299\n",
+      "\n",
+      "6 - the result of dot product is  0.0\n",
+      "random angle is 286.3\n",
+      "x1 , y1 = 0.28067 -0.95981\n",
+      "x2 , y2 = 0.95981 0.28067\n",
+      "\n",
+      "7 - the result of dot product is  0.0\n",
+      "random angle is 263.7\n",
+      "x1 , y1 = -0.10973 -0.99396\n",
+      "x2 , y2 = 0.99396 -0.10973\n",
+      "\n",
+      "8 - the result of dot product is  0.0\n",
+      "random angle is 164.3\n",
+      "x1 , y1 = -0.96269 0.2706\n",
+      "x2 , y2 = -0.2706 -0.96269\n",
+      "\n",
+      "9 - the result of dot product is  0.0\n",
+      "random angle is 330.9\n",
+      "x1 , y1 = 0.87377 -0.48634\n",
+      "x2 , y2 = 0.48634 0.87377\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "from math import pi\n",
@@ -584,9 +641,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1': 100}\n",
+      "your guess is theta2\n",
+      "picked_angle is theta2\n"
+     ]
+    }
+   ],
    "source": [
     "from random import randrange\n",
     "from math import pi\n",
@@ -631,6 +698,13 @@
     "print(\"your guess is\",your_guess)\n",
     "print(\"picked_angle is\",picked_angle)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
